deploy/prow/prow_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prow
  name: prow
spec:
  rules:
  - host: prow.gardener.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deck
            port:
              number: 80
      - path: /hook
        pathType: Prefix
        backend:
          service:
            name: hook
            port:
              number: 8888
  tls:
  - hosts:
    - prow.gardener.cloud
    secretName: prow-ingress-tls
